--- a/src/pages/accessories/accessoryDetails.css
+++ b/src/pages/accessories/accessoryDetails.css
@@ -26,13 +26,14 @@
   border: 2px solid #ccc;
   border-radius: 10px;
   background-color: #f9f9f9;
-  width: calc(25% - 20px); /* 4 елемента на ред, изваждаме gap-а */
-  max-width: 150px; /* За да не стават прекалено големи */
+  max-height: 240;
+  max-width: 150px; 
   text-align: center;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.2s;
   text-decoration: none;
   color: inherit;
+  position: relative;
 }
 
 .accessory-card:hover {
@@ -45,27 +46,36 @@
   height: 150px;
   object-fit: cover;
   border-radius: 8px;
-  margin-bottom: 15px;
+  margin-bottom: 3px;
 }
 
 .accessory-card h3 {
-  display: -webkit-box;
-  font-size: 16px;
-  color: #333;
-  margin: 5px 0;
+  display: flex;
+  font-size: 13px;
+  font-weight: 300;
+  color: #000000;
+  margin: 2px 0;
+  align-self: flex-start;
+  margin-left: 4px;
+  margin-top: 10px;
+  
 }
 
 .price {
-  font-size: 1rem;
-  color: #0078d4;
-  font-weight: 700;
-  font-family: "Zilla Sans Condensed", Roboto, Arial, sans-serif;
+  color: #f39c12;
   margin-top: 10px;
-  padding: 10px;
-  border-radius: 5px;
-  display: inline-block;
+  padding: 1px;
+  display: flex;
   text-align: center;
   width: 100%;
+  justify-content: flex-start;
+  margin-left: 5px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-family: "Zilla Slab", Roboto, Arial, sans-serif;
+  font-weight: 700;
+  
+  
 }
 
 .no-accessories {
