--- a/src/pages/accessories/accessoryDetailPage.css
+++ b/src/pages/accessories/accessoryDetailPage.css
@@ -1,27 +1,63 @@
 .accessory-detail-page {
-    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 10vh; 
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
 }
 
 .accessory-detail-container {
     display: flex;
+    justify-content: space-between;
     align-items: flex-start;
     gap: 20px;
+    max-width: 1200px;
+    width: 100%;
 }
 
-.main-image img {
-    width: 400px;
-    height: auto;
+.thumbnail-images {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 100px;
 }
 
 .thumbnail-images img {
     width: 80px;
     height: auto;
     cursor: pointer;
-    margin-top: 10px;
+    margin-bottom: 10px;
+    transition: transform 0.3s ease;
+}
+
+.thumbnail-images img:hover {
+    transform: scale(1.1); 
+}
+
+.main-image {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+}
+
+.main-image img {
+    width: 100%;
+    max-width: 250px; 
+    height: auto;
 }
 
 .accessory-info {
     max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.price {
+    font-weight: bold;
+    font-size: 1.2rem;
 }
 
 .add-to-cart-btn {
@@ -29,6 +65,8 @@
     border: 1px solid #a88734;
     padding: 10px;
     cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.2s ease;
 }
 
 .add-to-cart-btn:hover {
