--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -10,13 +10,13 @@
     z-index: 1000;
 }
 
-/* .navbar-content { */
-    /* display: flex;
+.navbar-content {
+    display: flex;
     justify-content: space-between;
-    align-items: center; */
+    align-items: center;
     /* width: 100%; */
     /* margin-right: 170px; */
-/* } */
+}
 
 .logo {
     max-width: 150px;
@@ -486,7 +486,9 @@
 
     .nav-links.show {
         display: flex;
-        margin-left: 120px;
+        /* margin-left: 120px; */
+        /* align-self: flex-end; */
+        right: -10px;
     }
 
     .btn {
